Update github url, email, resume link and python personal projects

--- a/javascript_projects/personal_website/main.html
+++ b/javascript_projects/personal_website/main.html
@@ -61,7 +61,7 @@
         <div class="resume">
           <h2>Resume</h2>
           <p class="pt-3">
-            Click <a href="../capstone-project-1/main.html">here</a> for my
+            Click <a href="../online_resume/main.html">here</a> for my
             resume!
           </p>
         </div>
@@ -71,13 +71,13 @@
           <div class="pt-5 row justify-content-center">
             <div class="col-5 d-flex align-items-center">
               <a
-                href="https://github.com/kmh90/projects/blob/main/python-projects/tic_tac_toe/tic-tac-toe.py"
+                href="https://github.com/kmh90/personal-projects/blob/main/python_projects/tic_tac_toe/tic-tac-toe.py"
                 ><img src="./img/tic-tac-toe.jpg" height="100%" width="100%"
               /></a>
             </div>
             <div class="col-5 d-flex align-items-center">
               <a
-                href="https://github.com/kmh90/projects/blob/main/python-projects/connect_four/ConnectFour.py"
+                href="https://github.com/kmh90/personal-projects/blob/main/python_projects/connect_four/ConnectFour.py"
                 ><img src="./img/connect-4.jpg" height="100%" width="100%"
               /></a>
             </div>
@@ -144,7 +144,7 @@
                 interesting they are. We can learn them together!
               </p>
             </div>
-            <a href="mailto:someone@example.com" class="btn contact-btn"
+            <a href="mailto:kang_ming_han@hotmail.com" class="btn contact-btn"
               >CONTACT ME</a
             >
           </div>
@@ -157,7 +157,7 @@
         <footer class="pt-4 py-md-5">
           <div>
             <a class="links" href="www.linkedin.com/in/ming-han-kang-92b281177">LinkedIn</a>
-            <a class="links" href="https://github.com/kmh90">Github</a>
+            <a class="links" href="https://github.com/kmh90/personal-projects">Github</a>
           </div>
           <div class="col-lg-12 pt-4">
             <p class="">© Ming Han KANG 2025</p>
